--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.21.3",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
